--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.16.6",
+    "@tsparticles/react": "^3.0.0",
     "@types/three": "^0.164.0",
     "clsx": "^2.1.1",
     "next": "14.0.1",
@@ -18,7 +19,8 @@
     "react-dom": "^18",
     "styled-components": "^6.1.11",
     "tailwind-merge": "^2.3.0",
-    "three": "^0.164.1"
+    "three": "^0.164.1",
+    "tsparticles": "^3.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
