--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.16.6",
+    "@splinetool/react-spline": "^2.2.6",
+    "@splinetool/runtime": "^1.3.8",
     "@tsparticles/react": "^3.0.0",
     "@types/three": "^0.164.0",
     "clsx": "^2.1.1",
